hphp/hack/test/typecheck/references/refs_in_array/pass_by_ref.php.exp
File "pass_by_ref.php", line 3, characters 24-24:
Encountered unexpected token '&'. (Parsing[1002])
